# aurora-dsql-connectors

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/actions/report-canary-failure/: action.yml
.github/workflows/: ci-gate.yml  compat-canary.yml  dependabot-automerge.yml  dotnet-npgsql-ci.yml  dotnet-npgsql-release.yml  dsql-cluster-create.yml  dsql-cluster-delete.yml  gitleaks-scan.yml  go-pgx-ci.yml  go-pgx-release.yml  java-jdbc-ci.yml  java-jdbc-release.yml  node-postgres-ci.yml  node-postgres-release.yml  php-pdo-pgsql-ci.yml  php-pdo-pgsql-release.yml  postgres-js-ci.yml  postgres-js-release.yml  pre-commit.yml  publish-pypi.yml  python-connector-ci.yml  python-connector-integration-tests.yml  python-connector-release.yml  ruby-pg-ci.yml  ruby-pg-release.yml  rust-sqlx-ci.yml  rust-sqlx-release.yml  setup-packagist-webhook.yml  update-changelog.yml
docs/plans/: 2026-04-08-php-migration-simple.md  2026-04-08-php-pdo-pgsql-monorepo-migration.md
dotnet/npgsql/: CHANGELOG.md  NOTICE  README.md
dotnet/npgsql/example/: README.md  example.csproj
dotnet/npgsql/example/src/: ExamplePreferred.cs
dotnet/npgsql/example/test/: ExamplePreferredTest.cs
dotnet/npgsql/src/Amazon.AuroraDsql.Npgsql/: Amazon.AuroraDsql.Npgsql.csproj  AuroraDsql.cs  ConnectorVersion.cs  DsqlConfig.cs  DsqlConnection.cs  DsqlDataSource.cs  DsqlException.cs  OccRetry.cs  Token.cs  Util.cs  Version.cs
go/pgx/: CHANGELOG.md  README.md  go.mod  go.sum
go/pgx/dsql/: config.go  config_test.go  conn.go  conn_test.go  dsql.go  pool.go  pool_test.go  token.go  token_cache.go  token_cache_test.go  token_test.go  util.go  util_test.go
go/pgx/example/: README.md  go.mod  go.sum
go/pgx/example/src/: example_preferred.go
go/pgx/example/test/: example_preferred_test.go
go/pgx/occretry/: db.go  db_test.go  occretry.go  occretry_test.go
java/jdbc/: CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts
java/jdbc/examples/pgjdbc/: README.md  build.gradle.kts
java/jdbc/integration-tests/: build.gradle.kts
node/.github/: dependabot.yml
node/.github/workflows/: node-postgres-publish.yml  postgres-js-integration-tests.yml  postgres-js-publish.yml
node/node-postgres/: CHANGELOG.md  README.md  package-lock.json  package.json
node/node-postgres/example/: README.md  package-lock.json  package.json
node/node-postgres/example/src/: example_preferred.js
node/node-postgres/example/test/: example_preferred.test.js
node/node-postgres/src/: aurora-dsql-client.ts  aurora-dsql-pool.ts  index.ts  occ-retry.ts
node/node-postgres/src/config/: aurora-dsql-config.ts
node/node-postgres/test/: aurora-dsql-client.test.ts  aurora-dsql-pool.test.ts  occ-retry.test.ts
node/node-postgres/test/integration/: dsql.integration.test.ts
node/postgres-js/: CHANGELOG.md  README.md  package-lock.json  package.json
node/postgres-js/example/: README.md  package-lock.json  package.json
node/postgres-js/src/: client.ts  index.ts  occ-retry.ts
node/postgres-js/test/: client.test.ts  occ-retry.test.ts
node/postgres-js/test/integration/: dsql.integration.test.ts
php/pdo_pgsql/: CHANGELOG.md  LICENSE  README.md  phpunit.xml
php/pdo_pgsql/example/: README.md  composer.json
php/pdo_pgsql/example/src/: example_preferred.php
php/pdo_pgsql/src/: DsqlPdo.php
php/pdo_pgsql/test/Integration/: ApplicationNameTest.php  BasicConnectionTest.php  DatabaseOperationsTest.php  OccRetryConcurrentTest.php
php/pdo_pgsql/test/integration/: DatabaseOperationsTest.php  DsnParsingTest.php  OccRetryConcurrentTest.php
python/: pyproject.toml
python/connector/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python/connector/aurora_dsql_asyncpg/: pool.py
python/connector/aurora_dsql_psycopg/: pool.py
python/connector/dsql_core/: _version.py  occ_retry.py
python/connector/examples/asyncpg/: README.md  pyproject.toml
python/connector/examples/psycopg/: README.md  pyproject.toml
ruby/pg/: .gitignore  CHANGELOG.md  Gemfile  README.md  Rakefile  aurora-dsql-ruby-pg.gemspec
ruby/pg/example/: Gemfile  README.md
ruby/pg/lib/: aurora_dsql_pg.rb
rust/bb8/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
rust/bb8/example/: Cargo.toml
rust/bb8/example/src/: example_preferred.rs
rust/bb8/example/tests/: example_preferred_test.rs
rust/bb8/src/: lib.rs
rust/bb8/tests/integration/: connection_integration_test.rs  mod.rs  pool_integration_test.rs  test_util.rs
rust/sqlx/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
rust/sqlx/example/: Cargo.toml  README.md
rust/sqlx/example/src/: example_preferred.rs
rust/sqlx/example/src/alternatives/: README.md  no_pool.rs
rust/sqlx/example/src/alternatives/no_connection_pool/: example_no_connection_pool.rs
rust/sqlx/example/tests/: example_preferred_test.rs  no_pool_test.rs
rust/sqlx/example/tests/alternatives/no_connection_pool/: example_no_connection_pool_test.rs
rust/sqlx/examples/: basic.rs
rust/sqlx/src/: config.rs  connection.rs  error.rs  lib.rs  occ_retry.rs  occ_trait.rs  pool.rs  retry_query.rs  sqlx_compat.rs  token.rs  token_cache.rs  util.rs
rust/sqlx/tests/: tests.rs
rust/sqlx/tests/hydra/: integration_test.rs
rust/sqlx/tests/integration/: connection_integration_test.rs  mod.rs  occ_trait_integration_test.rs  pool_integration_test.rs  test_util.rs
rust/sqlx/tests/unit/: config_test.rs  connection_test.rs  error_test.rs  mod.rs  occ_retry_test.rs  pool_test.rs  token_cache_test.rs  token_test.rs  util_test.rs
(+76 files in other folders)
