[package]
name = "aurora-dsql-sqlx-connector"
version = "0.0.1"
edition = "2021"
description = "Aurora DSQL connector for SQLx"
authors = ["Amazon Web Services"]
license = "Apache-2.0"
repository = "https://github.com/awslabs/aurora-dsql-connectors"
homepage = "https://github.com/awslabs/aurora-dsql-connectors/tree/main/rust/sqlx"
keywords = ["aws", "aurora", "dsql", "postgres", "sqlx"]
categories = ["database", "authentication"]

[features]
default = []
pool = ["dep:bb8"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls-ring"] }
bb8 = { version = "0.9", optional = true }
aws-config = { version = "1.5", features = ["credentials-login"] }
aws-sdk-dsql = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
url = "2.5"
rand = "0.10.0"

[dev-dependencies]
tokio-test = "0.4"
