[package]
name = "aurora-dsql-sqlx-connector"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
description = "Aurora DSQL connector for SQLx"
authors = ["Amazon Web Services"]
license = "Apache-2.0"
repository = "https://github.com/awslabs/aurora-dsql-connectors"
homepage = "https://github.com/awslabs/aurora-dsql-connectors/tree/main/rust/sqlx"
keywords = ["aws", "aurora", "dsql", "postgres", "sqlx"]
categories = ["database", "authentication"]

[features]
default = []
pool = ["dep:tokio", "tokio/rt", "tokio/time", "tokio/macros"]
occ = ["dep:rand", "dep:tokio", "tokio/time"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls-ring"] }
aws-config = { version = "1.8", features = ["credentials-login"] }
aws-sdk-dsql = "1.0"
tokio = { version = "1", optional = true }
thiserror = "2.0"
url = "2.5"
rand = { version = "0.10.0", optional = true }
regex = "1"
tracing = "0.1"
derive_builder = "0.20"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4"
aws-credential-types = "1"
