[package]
name = "aurora-dsql-sqlx-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example_preferred"
path = "src/example_preferred.rs"

[[bin]]
name = "example_no_connection_pool"
path = "src/alternatives/no_connection_pool/example_no_connection_pool.rs"

[[test]]
name = "example_no_connection_pool_test"
path = "tests/alternatives/no_connection_pool/example_no_connection_pool_test.rs"

[dependencies]
aurora-dsql-sqlx-connector = { path = "..", features = ["pool"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
